Connected actions to category clicks

--- a/src/layouts/style.css
+++ b/src/layouts/style.css
@@ -1,5 +1,5 @@
 .root {
-    -fx-background-color: linear-gradient(#F2F2EF, #13A3A5);
+    -fx-background-color: linear-gradient(#F2F2EF, #f2ede1);
 }
 .button {
     -fx-background-color: #DBC390;
