--- a/src/layouts/main_window.fxml
+++ b/src/layouts/main_window.fxml
@@ -105,7 +105,7 @@
             </AnchorPane>
          </left>
          <right>
-            <AnchorPane prefHeight="649.0" prefWidth="206.0" BorderPane.alignment="CENTER">
+            <AnchorPane prefHeight="649.0" prefWidth="300.0" BorderPane.alignment="CENTER">
                <children>
                   <Button layoutX="74.0" layoutY="606.0" mnemonicParsing="false" onAction="#toCheckout" prefHeight="63.0" prefWidth="190.0" text="Till kassa" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0">
                      <font>
@@ -136,7 +136,7 @@
          <center>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
                <children>
-                  <TextField fx:id="searchField" layoutX="-157.0" layoutY="56.0" onAction="#searchPerformed" onKeyTyped="#searchPerformed" prefHeight="64.0" prefWidth="525.0" promptText="Sök..." AnchorPane.leftAnchor="2.0" AnchorPane.rightAnchor="73.0" AnchorPane.topAnchor="5.0">
+                  <TextField fx:id="searchField" layoutX="-157.0" layoutY="56.0" onAction="#searchPerformed" prefHeight="64.0" prefWidth="525.0" promptText="Sök..." AnchorPane.leftAnchor="2.0" AnchorPane.rightAnchor="73.0" AnchorPane.topAnchor="5.0">
                      <font>
                         <Font size="27.0" />
                      </font>
