--- a/src/layouts/payment.fxml
+++ b/src/layouts/payment.fxml
@@ -14,7 +14,7 @@
 
 <AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" prefHeight="500.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.PaymentController">
    <children>
-      <RadioButton fx:id="DeliveryPayment" layoutX="31.0" layoutY="23.0" mnemonicParsing="false" onAction="#paymentChosen" text="Betala vid leverans" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="10.0">
+      <RadioButton fx:id="invoicePayment" layoutX="31.0" layoutY="23.0" mnemonicParsing="false" onAction="#paymentChosen" text="Betala vid leverans" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="10.0">
          <font>
             <Font size="18.0" />
          </font>
@@ -22,14 +22,14 @@
             <ToggleGroup fx:id="paymentMethod" />
          </toggleGroup>
       </RadioButton>
-      <RadioButton layoutX="10.0" layoutY="58.0" mnemonicParsing="false" onAction="#paymentChosen" text="Direktbetalning" toggleGroup="$paymentMethod" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="50.0">
+      <RadioButton fx:id="cardPayment" layoutX="10.0" layoutY="58.0" mnemonicParsing="false" onAction="#paymentChosen" text="Direktbetalning" toggleGroup="$paymentMethod" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="50.0">
          <font>
             <Font size="18.0" />
          </font>
       </RadioButton>
       <StackPane prefHeight="150.0" prefWidth="200.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="100.0">
          <children>
-            <AnchorPane prefHeight="200.0" prefWidth="200.0">
+            <AnchorPane fx:id="invoicePane" prefHeight="200.0" prefWidth="200.0">
                <children>
                   <VBox alignment="CENTER" layoutX="201.0" layoutY="66.0" prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                      <children>
@@ -43,7 +43,7 @@
                   </VBox>
                </children>
             </AnchorPane>
-            <AnchorPane style="-fx-border-color: black;">
+            <AnchorPane fx:id="cardPane" style="-fx-border-color: black;">
                <children>
                   <Label layoutX="10.0" layoutY="10.0" text="Kortnummer" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="10.0">
                      <font>
