--- a/src/layouts/product_element_checkout.fxml
+++ b/src/layouts/product_element_checkout.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="60.0" prefWidth="460.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
+<GridPane fx:id="grid" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="60.0" prefWidth="460.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <columnConstraints>
       <ColumnConstraints hgrow="SOMETIMES" maxWidth="148.0" minWidth="10.0" prefWidth="123.0" />
       <ColumnConstraints hgrow="SOMETIMES" maxWidth="154.0" minWidth="10.0" prefWidth="154.0" />
@@ -21,12 +21,12 @@
       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
    </rowConstraints>
    <children>
-      <Label text="Varunamn">
+      <Label fx:id="productName" text="Varunamn">
          <font>
             <Font size="22.0" />
          </font>
       </Label>
-      <Label text="9999 kr/kg" GridPane.columnIndex="2">
+      <Label fx:id="pricePerUnit" text="9999 kr/kg" GridPane.columnIndex="2">
          <padding>
             <Insets left="7.0" />
          </padding>
@@ -34,7 +34,7 @@
             <Font size="20.0" />
          </font>
       </Label>
-      <Label text="9999 kr" GridPane.columnIndex="3">
+      <Label fx:id="totalPrice" text="9999 kr" GridPane.columnIndex="3">
          <padding>
             <Insets left="7.0" />
          </padding>
