--- a/src/ListCells/product_element.fxml
+++ b/src/ListCells/product_element.fxml
@@ -1,11 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -19,7 +13,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="backgroundPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="150.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane fx:id="backgroundPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="150.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <GridPane alignment="TOP_RIGHT" layoutX="192.0" layoutY="89.0" prefHeight="311.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <columnConstraints>
@@ -48,7 +42,7 @@
             </Label>
             <HBox alignment="CENTER" prefHeight="42.0" prefWidth="200.0" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="TOP">
                <children>
-                  <Button alignment="CENTER" mnemonicParsing="false" prefHeight="0.0" prefWidth="26.0" text="-">
+                  <Button fx:id="removeAmount" alignment="CENTER" mnemonicParsing="false" prefHeight="0.0" prefWidth="26.0" text="-">
                      <HBox.margin>
                         <Insets bottom="2.0" left="2.0" right="2.0" />
                      </HBox.margin>
@@ -64,7 +58,7 @@
                         <Font size="14.0" />
                      </font>
                   </TextField>
-                  <Button alignment="CENTER" mnemonicParsing="false" prefHeight="25.0" prefWidth="25.0" text="+">
+                  <Button fx:id="addAmount" alignment="CENTER" mnemonicParsing="false" prefHeight="25.0" prefWidth="25.0" text="+">
                      <HBox.margin>
                         <Insets bottom="2.0" left="2.0" right="2.0" />
                      </HBox.margin>
