--- a/src/layouts/cart_element.fxml
+++ b/src/layouts/cart_element.fxml
@@ -1,18 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.scene.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.text.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
 
-<GridPane fx:id="grid" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="60.0" prefWidth="460.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<GridPane fx:id="grid" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" prefHeight="32.0" prefWidth="309.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
   <columnConstraints>
-    <ColumnConstraints hgrow="SOMETIMES" maxWidth="148.0" minWidth="10.0" prefWidth="123.0" />
-    <ColumnConstraints hgrow="SOMETIMES" maxWidth="154.0" minWidth="10.0" prefWidth="154.0" />
-      <ColumnConstraints hgrow="SOMETIMES" maxWidth="139.0" minWidth="10.0" prefWidth="108.0" />
-      <ColumnConstraints hgrow="SOMETIMES" maxWidth="103.0" minWidth="10.0" prefWidth="74.0" />
+    <ColumnConstraints hgrow="SOMETIMES" maxWidth="166.5" minWidth="10.0" prefWidth="161.0" />
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="139.0" minWidth="10.0" prefWidth="62.0" />
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="103.0" minWidth="10.0" prefWidth="57.0" />
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="103.0" minWidth="10.0" prefWidth="37.0" />
   </columnConstraints>
   <rowConstraints>
     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -20,31 +22,37 @@
    <children>
       <Label fx:id="productName" text="Varunamn">
          <font>
-            <Font size="22.0" />
+            <Font size="16.0" />
          </font>
       </Label>
-      <Label fx:id="pricePerUnit" text="9999 kr/kg" GridPane.columnIndex="2">
+      <Label fx:id="pricePerUnit" text="99 kr/kg" GridPane.columnIndex="1" GridPane.halignment="RIGHT">
          <padding>
             <Insets left="7.0" />
          </padding>
          <font>
-            <Font size="20.0" />
+            <Font size="14.0" />
          </font>
       </Label>
-      <Label fx:id="totalPrice" text="9999 kr" GridPane.columnIndex="3">
+      <Label fx:id="totalPrice" text="99 kr" GridPane.columnIndex="2" GridPane.halignment="RIGHT">
          <padding>
             <Insets left="7.0" />
          </padding>
          <font>
-            <Font size="20.0" />
+            <Font size="16.0" />
          </font>
       </Label>
-      <Group GridPane.columnIndex="1">
-         <children>
-            <Button maxHeight="28.0" minWidth="-Infinity" mnemonicParsing="false" onAction="#onRemove" prefHeight="28.0" prefWidth="37.0" text="-" />
-            <TextField fx:id="amountTF" layoutX="40.0" onAction="#valueChanged" prefWidth="40.0" />
-            <Button fx:id="addButton" layoutX="83.0" maxHeight="28.0" maxWidth="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#onAdd" prefHeight="28.0" prefWidth="37.0" text="+" />
-         </children>
-      </Group>
+      <Label fx:id="amountTF" text="5 st á" GridPane.halignment="RIGHT">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
+      <Button mnemonicParsing="false" style="-fx-background-color: red;" text="X" textFill="WHITE" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+         <GridPane.margin>
+            <Insets />
+         </GridPane.margin>
+      </Button>
    </children>
 </GridPane>
