--- a/src/layouts/product_element_checkout.fxml
+++ b/src/layouts/product_element_checkout.fxml
@@ -10,10 +10,10 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<GridPane fx:id="grid" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="60.0" prefWidth="460.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
+<GridPane fx:id="grid" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="60.0" prefWidth="473.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <columnConstraints>
-      <ColumnConstraints hgrow="SOMETIMES" maxWidth="148.0" minWidth="10.0" prefWidth="123.0" />
-      <ColumnConstraints hgrow="SOMETIMES" maxWidth="154.0" minWidth="10.0" prefWidth="154.0" />
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="164.5" minWidth="10.0" prefWidth="158.5" />
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="154.0" minWidth="10.0" prefWidth="119.5" />
       <ColumnConstraints hgrow="SOMETIMES" maxWidth="139.0" minWidth="10.0" prefWidth="108.0" />
       <ColumnConstraints hgrow="SOMETIMES" maxWidth="103.0" minWidth="10.0" prefWidth="74.0" />
    </columnConstraints>
@@ -26,7 +26,7 @@
             <Font size="22.0" />
          </font>
       </Label>
-      <Label fx:id="pricePerUnit" text="9999 kr/kg" GridPane.columnIndex="2">
+      <Label fx:id="pricePerUnit" text="999 kr/kg" GridPane.columnIndex="2" GridPane.halignment="RIGHT">
          <padding>
             <Insets left="7.0" />
          </padding>
@@ -34,7 +34,7 @@
             <Font size="20.0" />
          </font>
       </Label>
-      <Label fx:id="totalPrice" text="9999 kr" GridPane.columnIndex="3">
+      <Label fx:id="totalPrice" text="99 kr" GridPane.columnIndex="3" GridPane.halignment="RIGHT">
          <padding>
             <Insets left="7.0" />
          </padding>
@@ -42,11 +42,20 @@
             <Font size="20.0" />
          </font>
       </Label>
-      <Group GridPane.columnIndex="1">
+      <Group GridPane.columnIndex="1" GridPane.halignment="CENTER">
          <children>
-            <Button maxHeight="28.0" minWidth="-Infinity" mnemonicParsing="false" prefHeight="28.0" prefWidth="37.0" text="-" />
-            <TextField layoutX="40.0" prefWidth="40.0" />
-            <Button layoutX="83.0" maxHeight="28.0" maxWidth="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="28.0" prefWidth="37.0" text="+" />
+            <Button maxHeight="28.0" minWidth="-Infinity" mnemonicParsing="false" onAction="#onRemove" prefHeight="28.0" prefWidth="37.0" text="-">
+               <font>
+                  <Font name="System Bold" size="15.0" />
+               </font></Button>
+            <TextField fx:id="amountTF" alignment="CENTER" layoutX="40.0" onAction="#valueChanged" prefHeight="33.0" prefWidth="40.0">
+               <font>
+                  <Font size="15.0" />
+               </font></TextField>
+            <Button fx:id="addButton" layoutX="83.0" maxHeight="28.0" maxWidth="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#onAdd" prefHeight="28.0" prefWidth="37.0" text="+">
+               <font>
+                  <Font name="System Bold" size="15.0" />
+               </font></Button>
          </children>
       </Group>
    </children>
