--- a/src/layouts/cart.fxml
+++ b/src/layouts/cart.fxml
@@ -27,7 +27,7 @@
             <Font size="24.0" />
          </font>
       </Label>
-      <Label alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="170.0" layoutY="467.0" minHeight="50.0" prefWidth="90.0" text="100:-" textAlignment="RIGHT" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="10.0">
+      <Label fx:id="sumLabel" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="170.0" layoutY="467.0" minHeight="50.0" prefWidth="90.0" text="100:-" textAlignment="RIGHT" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="10.0">
          <font>
             <Font size="24.0" />
          </font>
