--- a/src/layouts/main_window.fxml
+++ b/src/layouts/main_window.fxml
@@ -1,10 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Accordion?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -24,7 +19,7 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="674.0" prefWidth="1004.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="IMatController">
+<AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="674.0" prefWidth="1004.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="IMatController">
    <children>
       <MenuBar AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <menus>
@@ -129,7 +124,7 @@
                         <Font size="27.0" />
                      </font>
                   </Label>
-                  <Label alignment="CENTER" text="50 :-" AnchorPane.bottomAnchor="70.0" AnchorPane.rightAnchor="5.0">
+                  <Label fx:id="sumLabel" alignment="CENTER" text="50 :-" AnchorPane.bottomAnchor="70.0" AnchorPane.rightAnchor="5.0">
                      <font>
                         <Font size="27.0" />
                      </font>
