Tweaked product grid headers. Included receipt-view with controller.

--- a/src/layouts/checkout.fxml
+++ b/src/layouts/checkout.fxml
@@ -19,6 +19,7 @@
                   <fx:include fx:id="payment" source="payment.fxml" />
                   <fx:include fx:id="delivery" source="delivery.fxml" />
                   <fx:include fx:id="cart" source="cart.fxml" />
+                  <fx:include fx:id="receipt" source="receipt.fxml" />
                </children>
                <BorderPane.margin>
                   <Insets />
