--- a/src/layouts/receipt.fxml
+++ b/src/layouts/receipt.fxml
@@ -3,52 +3,36 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="540.0" prefWidth="722.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="422.0" prefWidth="549.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.ReceiptController">
    <children>
-      <Button layoutX="557.0" layoutY="14.0" mnemonicParsing="false" prefHeight="69.0" prefWidth="151.0" text="Skriv ut" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="14.0">
+      <Button layoutX="379.0" layoutY="116.0" mnemonicParsing="false" onAction="#print" prefHeight="69.0" prefWidth="143.0" text="Skriv ut kvitto" AnchorPane.rightAnchor="45.0" AnchorPane.topAnchor="116.0">
          <font>
             <Font size="16.0" />
          </font>
       </Button>
-      <Button layoutX="557.0" layoutY="457.0" mnemonicParsing="false" prefHeight="69.0" prefWidth="151.0" text="Historik" AnchorPane.bottomAnchor="14.0" AnchorPane.rightAnchor="14.0">
+      <Button layoutX="360.0" layoutY="320.0" mnemonicParsing="false" onAction="#saveShoppingList" prefHeight="69.0" prefWidth="143.0" text="Spara inköpslista" AnchorPane.bottomAnchor="30.0" AnchorPane.rightAnchor="45.0">
          <font>
             <Font size="16.0" />
          </font>
       </Button>
-      <Button layoutX="557.0" layoutY="363.0" mnemonicParsing="false" prefHeight="69.0" prefWidth="151.0" text="Spara inköpslista" AnchorPane.rightAnchor="14.0">
-         <font>
-            <Font size="16.0" />
-         </font>
-      </Button>
-      <TextArea disable="true" editable="false" layoutX="557.0" layoutY="170.0" prefHeight="174.0" prefWidth="151.0" AnchorPane.rightAnchor="14.0" />
-      <Button layoutX="14.0" layoutY="457.0" mnemonicParsing="false" prefHeight="69.0" prefWidth="151.0" text="Tillbaka till affär" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="14.0">
-         <font>
-            <Font size="16.0" />
-         </font>
-      </Button>
-      <Label layoutX="557.0" layoutY="143.0" prefHeight="27.0" prefWidth="151.0" text="Leversras till:" AnchorPane.rightAnchor="14.0">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </Label>
-      <Label layoutX="332.0" layoutY="23.0" prefHeight="27.0" prefWidth="58.0" text="Tack" AnchorPane.leftAnchor="332.0" AnchorPane.rightAnchor="332.0" AnchorPane.topAnchor="23.0">
-         <font>
-            <Font size="27.0" />
-         </font>
-      </Label>
-      <AnchorPane layoutX="249.0" layoutY="99.0" prefHeight="405.0" prefWidth="255.0" AnchorPane.bottomAnchor="36.0" AnchorPane.leftAnchor="249.0" AnchorPane.rightAnchor="218.0" AnchorPane.topAnchor="99.0">
+      <AnchorPane layoutX="91.0" layoutY="66.0" maxHeight="1.7976931348623157E308" prefHeight="500.0" prefWidth="253.0" AnchorPane.bottomAnchor="7.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="218.0" AnchorPane.topAnchor="0.0">
          <children>
-            <VBox prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <VBox maxHeight="1.7976931348623157E308" prefHeight="200.0" prefWidth="211.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                <children>
+                  <HBox alignment="CENTER" prefHeight="43.0" prefWidth="255.0">
+                     <children>
+                        <Label prefHeight="39.0" prefWidth="205.0" text="Tack för ditt köp!" wrapText="true">
+                           <font>
+                              <Font size="27.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </HBox>
                   <HBox alignment="CENTER" prefHeight="43.0" prefWidth="255.0">
                      <children>
                         <Label alignment="TOP_LEFT" contentDisplay="TOP" text="Kvitto">
@@ -58,30 +42,52 @@
                         </Label>
                      </children>
                   </HBox>
-                  <Label text="Datum: 55895978">
-                     <font>
-                        <Font size="16.0" />
-                     </font>
-                  </Label>
-                  <Label text="Tid: 1212">
-                     <font>
-                        <Font size="16.0" />
-                     </font>
-                  </Label>
-                  <ListView prefHeight="307.0" prefWidth="255.0" />
-                  <Label text="Summa:">
-                     <font>
-                        <Font size="16.0" />
-                     </font>
-                  </Label>
+                  <HBox prefHeight="100.0" prefWidth="200.0" spacing="5.0">
+                     <children>
+                        <Label text="Datum:">
+                           <font>
+                              <Font size="16.0" />
+                           </font>
+                        </Label>
+                        <Label fx:id="dateLabel" text="2017">
+                           <font>
+                              <Font size="16.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </HBox>
+                  <HBox prefHeight="100.0" prefWidth="200.0" spacing="5.0">
+                     <children>
+                        <Label text="Tid:">
+                           <font>
+                              <Font size="16.0" />
+                           </font>
+                        </Label>
+                        <Label fx:id="timeLabel" text="15:30">
+                           <font>
+                              <Font size="16.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </HBox>
+                  <ListView fx:id="receiptList" maxHeight="1.7976931348623157E308" maxWidth="400.0" prefHeight="500.0" prefWidth="253.0" />
+                  <HBox prefHeight="100.0" prefWidth="200.0" spacing="5.0">
+                     <children>
+                        <Label text="Summa:">
+                           <font>
+                              <Font size="16.0" />
+                           </font>
+                        </Label>
+                        <Label fx:id="sumLabel" text="15 kr">
+                           <font>
+                              <Font size="16.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </HBox>
                </children>
             </VBox>
          </children>
       </AnchorPane>
-      <ImageView fitHeight="98.0" fitWidth="151.0" layoutX="14.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="14.0">
-         <image>
-            <Image url="@../resources/img/logo.png" />
-         </image>
-      </ImageView>
    </children>
 </AnchorPane>
