--- a/src/ListCells/product_element.fxml
+++ b/src/ListCells/product_element.fxml
@@ -1,11 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -17,9 +11,10 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="backgroundPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="150.0" prefWidth="280.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane fx:id="backgroundPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="150.0" prefWidth="280.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <GridPane alignment="TOP_RIGHT" layoutX="192.0" layoutY="89.0" prefHeight="311.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <columnConstraints>
@@ -95,16 +90,25 @@
                </font>
             </Label>
             <Button fx:id="addToFavoritesBtn" mnemonicParsing="false" prefHeight="31.0" prefWidth="37.0" GridPane.columnIndex="3" GridPane.halignment="RIGHT" GridPane.valignment="TOP">
-               <graphic>
-                  <ImageView fx:id="heartIcon" fitHeight="25.0" fitWidth="25.0" onMouseEntered="#invertIcon" onMouseExited="#invertIcon" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../resources/img/heart.png" />
-                     </image>
-                  </ImageView>
-               </graphic>
                <GridPane.margin>
                   <Insets right="2.0" top="2.0" />
                </GridPane.margin>
+               <graphic>
+                  <StackPane prefHeight="150.0" prefWidth="200.0">
+                     <children>
+                        <ImageView fx:id="heartIcon" fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../resources/img/heart.png" />
+                           </image>
+                        </ImageView>
+                        <ImageView fx:id="noHeartIcon" fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../resources/img/noheart.png" />
+                           </image>
+                        </ImageView>
+                     </children>
+                  </StackPane>
+               </graphic>
             </Button>
             <Button fx:id="addToCartButton" mnemonicParsing="false" prefHeight="35.0" prefWidth="169.0" text="Lägg i kundvagn" GridPane.columnIndex="1" GridPane.columnSpan="3" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER">
                <font>
