Increased the size of labels and buttons in account view and shopping list view

--- a/src/layouts/style.css
+++ b/src/layouts/style.css
@@ -16,3 +16,15 @@
 .titled-pane {
     -fx-background-color: #DBC390;
 }
+#deleteAccountButton {
+    -fx-font: bold 16px "Arial";
+}
+#saveAccountButton {
+    -fx-font: bold 15px "Arial";
+}
+#addToCart_ShoppingListButton {
+    -fx-font: bold 12px "Arial";
+}
+#shoppingListLabel {
+    -fx-font: bold 17px "Arial";
+}
