--- a/src/layouts/payment.fxml
+++ b/src/layouts/payment.fxml
@@ -33,6 +33,11 @@
                <children>
                   <VBox alignment="CENTER" layoutX="201.0" layoutY="66.0" prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                      <children>
+                        <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../resources/img/invoice.png" />
+                           </image>
+                        </ImageView>
                         <Label text="Betala vid leverans!">
                            <font>
                               <Font size="22.0" />
