Made buttons more "rounded" and made it more prominent when hovering over buttons. (This will need to be changed when the color scheme is changed).

--- a/src/layouts/payment.fxml
+++ b/src/layouts/payment.fxml
@@ -51,7 +51,7 @@
                   </VBox>
                </children>
             </AnchorPane>
-            <AnchorPane fx:id="cardPane" style="-fx-border-color: black;" visible="false">
+            <AnchorPane fx:id="cardPane" style="-fx-border-color: black;">
                <children>
                   <Label layoutX="10.0" layoutY="10.0" text="Kortnummer" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="10.0">
                      <font>
