--- a/src/layouts/delivery.fxml
+++ b/src/layouts/delivery.fxml
@@ -1,18 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.ToggleButton?>
+<?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="297.0" prefWidth="454.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.DeliveryController">
+<AnchorPane prefHeight="297.0" prefWidth="454.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.DeliveryController">
    <children>
       <Label alignment="CENTER_RIGHT" layoutX="-21.0" layoutY="48.0" prefWidth="135.0" text="Adress:">
          <font>
@@ -34,26 +31,31 @@
             <Font size="18.0" />
          </font>
       </Label>
-      <TextField fx:id="nameTF" layoutX="119.0" layoutY="14.0" prefWidth="300.0" promptText="Namn">
+      <TextField fx:id="nameTF" layoutX="119.0" layoutY="14.0" onAction="#saveText" prefWidth="300.0" promptText="Namn">
          <font>
             <Font size="14.0" />
          </font>
       </TextField>
-      <TextField fx:id="addressTF" layoutX="119.0" layoutY="48.0" prefWidth="300.0" promptText="Adress">
+      <TextField fx:id="addressTF" layoutX="119.0" layoutY="48.0" onAction="#saveText" prefWidth="300.0" promptText="Adress">
          <font>
             <Font size="14.0" />
          </font>
       </TextField>
-      <TextField fx:id="postcodeTF" layoutX="119.0" layoutY="82.0" prefHeight="25.0" prefWidth="100.0" promptText="Postnummer">
+      <TextField fx:id="postcodeTF" layoutX="119.0" layoutY="82.0" onAction="#saveText" prefHeight="25.0" prefWidth="100.0" promptText="Postnummer">
          <font>
             <Font size="14.0" />
          </font>
       </TextField>
-      <TextField fx:id="cityTF" layoutX="220.0" layoutY="82.0" prefHeight="25.0" prefWidth="199.0" promptText="Ort">
+      <TextField fx:id="cityTF" layoutX="220.0" layoutY="82.0" onAction="#saveText" prefHeight="25.0" prefWidth="199.0" promptText="Ort">
          <font>
             <Font size="14.0" />
          </font>
       </TextField>
+      <TextArea fx:id="miscInfoTA" layoutX="119.0" layoutY="116.0" prefHeight="61.0" prefWidth="300.0" promptText="Övriga instruktioner, ex. portkod.">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </TextArea>
       <Label layoutX="23.0" layoutY="191.0" text="Leveranstid:">
          <font>
             <Font size="18.0" />
@@ -63,98 +65,101 @@
          <font>
             <Font size="18.0" />
          </font>
+         <toggleGroup>
+            <ToggleGroup fx:id="deliverySelection" />
+         </toggleGroup>
       </ToggleButton>
-      <ToggleButton fx:id="t1_0" layoutX="214.0" layoutY="229.0" minHeight="40.0" mnemonicParsing="false" prefWidth="100.0" text="12-15">
+      <ToggleButton fx:id="t1_0" layoutX="214.0" layoutY="229.0" minHeight="40.0" mnemonicParsing="false" prefWidth="100.0" text="12-15" toggleGroup="$deliverySelection">
          <font>
             <Font size="18.0" />
          </font>
       </ToggleButton>
-      <ToggleButton fx:id="t2_0" layoutX="334.0" layoutY="229.0" minHeight="40.0" mnemonicParsing="false" prefWidth="100.0" text="15-18">
+      <ToggleButton fx:id="t2_0" layoutX="334.0" layoutY="229.0" minHeight="40.0" mnemonicParsing="false" prefWidth="100.0" text="15-18" toggleGroup="$deliverySelection">
          <font>
             <Font size="18.0" />
          </font>
       </ToggleButton>
-      <ToggleButton fx:id="t3_0" layoutX="454.0" layoutY="229.0" minHeight="40.0" mnemonicParsing="false" prefWidth="100.0" text="18-21">
+      <ToggleButton fx:id="t3_0" layoutX="454.0" layoutY="229.0" minHeight="40.0" mnemonicParsing="false" prefWidth="100.0" text="18-21" toggleGroup="$deliverySelection">
          <font>
             <Font size="18.0" />
          </font>
       </ToggleButton>
-      <ToggleButton fx:id="t3_1" layoutX="454.0" layoutY="279.0" minHeight="40.0" mnemonicParsing="false" prefWidth="100.0" text="18-21">
+      <ToggleButton fx:id="t0_1" layoutX="94.0" layoutY="279.0" minHeight="40.0" mnemonicParsing="false" prefWidth="100.0" text="9-12" toggleGroup="$deliverySelection">
          <font>
             <Font size="18.0" />
          </font>
       </ToggleButton>
-      <ToggleButton fx:id="t2_1" layoutX="334.0" layoutY="279.0" minHeight="40.0" mnemonicParsing="false" prefWidth="100.0" text="15-18">
+      <ToggleButton fx:id="t1_1" layoutX="214.0" layoutY="279.0" minHeight="40.0" mnemonicParsing="false" prefWidth="100.0" text="12-15" toggleGroup="$deliverySelection">
          <font>
             <Font size="18.0" />
          </font>
       </ToggleButton>
-      <ToggleButton fx:id="t1_1" layoutX="214.0" layoutY="279.0" minHeight="40.0" mnemonicParsing="false" prefWidth="100.0" text="12-15">
+      <ToggleButton fx:id="t2_1" layoutX="334.0" layoutY="279.0" minHeight="40.0" mnemonicParsing="false" prefWidth="100.0" text="15-18" toggleGroup="$deliverySelection">
          <font>
             <Font size="18.0" />
          </font>
       </ToggleButton>
-      <ToggleButton fx:id="t0_1" layoutX="94.0" layoutY="279.0" minHeight="40.0" mnemonicParsing="false" prefWidth="100.0" text="9-12">
+      <ToggleButton fx:id="t3_1" layoutX="454.0" layoutY="279.0" minHeight="40.0" mnemonicParsing="false" prefWidth="100.0" text="18-21" toggleGroup="$deliverySelection">
          <font>
             <Font size="18.0" />
          </font>
       </ToggleButton>
-      <ToggleButton fx:id="t3_2" layoutX="454.0" layoutY="329.0" minHeight="40.0" mnemonicParsing="false" prefWidth="100.0" text="18-21">
+      <ToggleButton fx:id="t0_2" layoutX="94.0" layoutY="329.0" minHeight="40.0" mnemonicParsing="false" prefWidth="100.0" text="9-12" toggleGroup="$deliverySelection">
          <font>
             <Font size="18.0" />
          </font>
       </ToggleButton>
-      <ToggleButton fx:id="t2_2" layoutX="334.0" layoutY="329.0" minHeight="40.0" mnemonicParsing="false" prefWidth="100.0" text="15-18">
+      <ToggleButton fx:id="t1_2" layoutX="214.0" layoutY="329.0" minHeight="40.0" mnemonicParsing="false" prefWidth="100.0" text="12-15" toggleGroup="$deliverySelection">
          <font>
             <Font size="18.0" />
          </font>
       </ToggleButton>
-      <ToggleButton fx:id="t1_2" layoutX="214.0" layoutY="329.0" minHeight="40.0" mnemonicParsing="false" prefWidth="100.0" text="12-15">
+      <ToggleButton fx:id="t2_2" layoutX="334.0" layoutY="329.0" minHeight="40.0" mnemonicParsing="false" prefWidth="100.0" text="15-18" toggleGroup="$deliverySelection">
          <font>
             <Font size="18.0" />
          </font>
       </ToggleButton>
-      <ToggleButton fx:id="t0_2" layoutX="94.0" layoutY="329.0" minHeight="40.0" mnemonicParsing="false" prefWidth="100.0" text="9-12">
+      <ToggleButton fx:id="t3_2" layoutX="454.0" layoutY="329.0" minHeight="40.0" mnemonicParsing="false" prefWidth="100.0" text="18-21" toggleGroup="$deliverySelection">
          <font>
             <Font size="18.0" />
          </font>
       </ToggleButton>
-      <ToggleButton fx:id="t3_3" layoutX="454.0" layoutY="379.0" minHeight="40.0" mnemonicParsing="false" prefWidth="100.0" text="18-21">
+      <ToggleButton fx:id="t0_3" layoutX="94.0" layoutY="379.0" minHeight="40.0" mnemonicParsing="false" prefWidth="100.0" text="9-12" toggleGroup="$deliverySelection">
          <font>
             <Font size="18.0" />
          </font>
       </ToggleButton>
-      <ToggleButton fx:id="t2_3" layoutX="334.0" layoutY="379.0" minHeight="40.0" mnemonicParsing="false" prefWidth="100.0" text="15-18">
+      <ToggleButton fx:id="t1_3" layoutX="214.0" layoutY="379.0" minHeight="40.0" mnemonicParsing="false" prefWidth="100.0" text="12-15" toggleGroup="$deliverySelection">
          <font>
             <Font size="18.0" />
          </font>
       </ToggleButton>
-      <ToggleButton fx:id="t1_3" layoutX="214.0" layoutY="379.0" minHeight="40.0" mnemonicParsing="false" prefWidth="100.0" text="12-15">
+      <ToggleButton fx:id="t2_3" layoutX="334.0" layoutY="379.0" minHeight="40.0" mnemonicParsing="false" prefWidth="100.0" text="15-18" toggleGroup="$deliverySelection">
          <font>
             <Font size="18.0" />
          </font>
       </ToggleButton>
-      <ToggleButton fx:id="t0_3" layoutX="94.0" layoutY="379.0" minHeight="40.0" mnemonicParsing="false" prefWidth="100.0" text="9-12">
+      <ToggleButton fx:id="t3_3" layoutX="454.0" layoutY="379.0" minHeight="40.0" mnemonicParsing="false" prefWidth="100.0" text="18-21" toggleGroup="$deliverySelection">
          <font>
             <Font size="18.0" />
          </font>
       </ToggleButton>
-      <ToggleButton fx:id="t0_4" layoutX="94.0" layoutY="429.0" minHeight="40.0" mnemonicParsing="false" prefWidth="100.0" text="9-12">
+      <ToggleButton fx:id="t0_4" layoutX="94.0" layoutY="429.0" minHeight="40.0" mnemonicParsing="false" prefWidth="100.0" text="9-12" toggleGroup="$deliverySelection">
          <font>
             <Font size="18.0" />
          </font>
       </ToggleButton>
-      <ToggleButton fx:id="t1_4" layoutX="214.0" layoutY="429.0" minHeight="40.0" mnemonicParsing="false" prefWidth="100.0" text="12-15">
+      <ToggleButton fx:id="t1_4" layoutX="214.0" layoutY="429.0" minHeight="40.0" mnemonicParsing="false" prefWidth="100.0" text="12-15" toggleGroup="$deliverySelection">
          <font>
             <Font size="18.0" />
          </font>
       </ToggleButton>
-      <ToggleButton fx:id="t2_4" layoutX="334.0" layoutY="429.0" minHeight="40.0" mnemonicParsing="false" prefWidth="100.0" text="15-18">
+      <ToggleButton fx:id="t2_4" layoutX="334.0" layoutY="429.0" minHeight="40.0" mnemonicParsing="false" prefWidth="100.0" text="15-18" toggleGroup="$deliverySelection">
          <font>
             <Font size="18.0" />
          </font>
       </ToggleButton>
-      <ToggleButton fx:id="t3_4" layoutX="454.0" layoutY="429.0" minHeight="40.0" mnemonicParsing="false" prefWidth="100.0" text="18-21">
+      <ToggleButton fx:id="t3_4" layoutX="454.0" layoutY="429.0" minHeight="40.0" mnemonicParsing="false" prefWidth="100.0" text="18-21" toggleGroup="$deliverySelection">
          <font>
             <Font size="18.0" />
          </font>
@@ -184,11 +189,6 @@
             <Font size="18.0" />
          </font>
       </Label>
-      <TextArea fx:id="miscInfoTA" layoutX="119.0" layoutY="116.0" prefHeight="61.0" prefWidth="300.0" promptText="Övriga instruktioner, ex. portkod.">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </TextArea>
       <Separator layoutX="1.0" layoutY="183.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" prefHeight="10.0" prefWidth="600.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
    </children>
 </AnchorPane>
